# Evera

./: .gitignore  README.md  evera.spec  evera_3.6-1_all.deb  io.github.jeffshee.Evera.json  meson.build
data/: io.github.jeffshee.Evera.appdata.xml.in  io.github.jeffshee.Evera.desktop.in  io.github.jeffshee.Evera.gschema.xml  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  rules
docs/: development.md
po/: POTFILES
src/: __main__.py  commons.py  evera.gresource  evera.gresource.xml  evera.in  market.py  menu.py  meson.build  server.py  utils.py
src/assets/: control.ui
src/gui/: control.py  gui_utils.py
src/player/: base_player.py  video_player.py  web_player.py
